--- a/src/components/communityReivew/Review.module.scss
+++ b/src/components/communityReivew/Review.module.scss
@@ -44,12 +44,13 @@
     text-align: left;
   }
   
+
   .storeInfo {
     border: 1px solid #ddd;
     border-radius: 8px;
     padding: 16px;
-    margin-top: 10px;
-    background-color: #f9f9f9;
+    margin: 10px 0 50px 0;
+    background-color: #f7fff7;
     display: flex;
     align-items: center;
     justify-content: space-between;
