--- a/src/components/header/MyInfo.module.scss
+++ b/src/components/header/MyInfo.module.scss
@@ -13,16 +13,28 @@
 }
 
 .myIconContainer {
+  margin-left: auto; /* 오른쪽 끝으로 이동 */
   display: flex;
   align-items: center;
-  margin-left: 10px; // 텍스트와 아이콘 사이의 간격
 }
 
+//.profileImage {
+//  width: 40px; // 원하는 크기로 설정
+//  height: 40px; // 원하는 크기로 설정
+//  border-radius: 50%; // 동그라미로 만들기
+//  object-fit: cover; // 이미지가 동그라미 안에 꽉 차게
+//  margin-right: 10px; // 이미지와 아이콘 사이의 간격
+//  cursor: pointer; // 마우스를 올리면 손가락 커서
+//}
+
 .profileImage {
-  width: 40px; // 원하는 크기로 설정
-  height: 40px; // 원하는 크기로 설정
-  border-radius: 50%; // 동그라미로 만들기
-  object-fit: cover; // 이미지가 동그라미 안에 꽉 차게
-  margin-right: 10px; // 이미지와 아이콘 사이의 간격
-  cursor: pointer; // 마우스를 올리면 손가락 커서
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  object-fit: cover;
+  cursor: pointer;
+  position: relative;
+  top: -138px;
+  right: 30px;
+  border: #03684e solid;
 }
