--- a/src/components/store/mypage-edit/SideBarBtn.module.scss
+++ b/src/components/store/mypage-edit/SideBarBtn.module.scss
@@ -21,7 +21,7 @@
   right: 0;
   height: var(--bar-hegiht);
   border-radius: calc(var(--bar-hegiht) / 2);
-  background: #fff;
+  background: #06654E;
   color: inherit;
   opacity: 1;
   transition: none 0.35s cubic-bezier(.5,-0.35,.35,1.5) 0s;
@@ -67,7 +67,7 @@
 
 .sidebarBtn {
   position: absolute;
-  top: 28px;
+  top: 18px;
   left: 30px;
   background: none;
   border: none;
