--- a/src/layout/Header.module.scss
+++ b/src/layout/Header.module.scss
@@ -1,21 +1,131 @@
 
-.logoutButton, .loginButton {
-  color: #fff;
-  border: none;
-  padding: 10px 20px;
-  cursor: pointer;
-  font-size: 16px;
-  position: absolute;
-  right: 30px;
+button {
+  background: none;  /* 배경색 제거 */
+  border: none;      /* 테두리 제거 */
+  padding: 0;        /* 기본 패딩 제거 */
+  margin: 0;         /* 기본 마진 제거 */
+  outline: none;     /* 포커스 시 나타나는 아웃라인 제거 */
+  cursor: pointer;   /* 클릭 가능한 상태임을 나타내는 커서 */
+}
+
+.searchStoreSection {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 600px;
+  margin: 0 auto;
+  background-color: rgba(6, 101, 78, 0.3);
   border-radius: 50px;
+  height: 40px;
+  position: relative;
+  top: -45px;
+  transition: background-color 0.3s ease;
+
+  input {
+    width: 100%;
+    border-radius: 5px;
+    background: none;
+    border: none;
+    padding-left: 35px;
+    &::placeholder {
+      color: #000000;
+    }
+    &:focus {
+      outline: none;
+      box-shadow: none;
+    }
+  }
+
+  .magnifyClickBtn {
+    position: relative;
+    left: 20px;
+    height: 20px;
+    width: 20px;
+
+    .magnifyIcon {
+      color: #06654E;
+      left: 20px;
+      height: 20px;
+    }
+  }
 }
 
-/* 각각의 버튼에 대한 스타일을 따로 적용하려면 아래와 같이 개별적으로 지정 */
-.logoutButton {
-  background-color: #610e0e;
+  .logoutBtn, .loginBtn { // 로그인, 로그아웃 버튼
+    background-color: #f44; // 버튼 배경색
+    color: #fff; // 텍스트 색상
+    border: none; // 기본 테두리 제거
+    padding: 10px 20px; // 패딩 추가
+    border-radius: 5px; // 모서리 둥글게
+    cursor: pointer; // 포인터 커서
+    font-size: 16px; // 폰트 크기
+  }
+
+  .locationPinIcon {
+    background-image: url("../assets/icon/location-pin.png") !important;
+    height: 32px;
+    width: 32px;
+    background-size: contain;
+    background-repeat: no-repeat;
+    position: absolute;
+    left: 210px;
+    top: 15px;
+  }
+
+  .logoBtn {
+    background-image: url("../assets/icon/greenlogo.png") !important;
+    height: 60px;
+    width: 60px;
+    background-size: contain;
+    background-repeat: no-repeat;
+    left: 100px;
+    position: relative;
+    top: 5px;
+  }
+.areaName {
+  position: relative;
+  top: -72.5px;
+  left: 245px;
+  font-size: 18px;
+  width: 300px;
+}
+.selectedAreaCategory {
+  position: relative;
+  top: -93px;
+  left: 460px;
+  font-size: 18px;
+  width: 200px;
+}
+.selectedAreaCategoryBtn {
+  background-image: url("../assets/icon/greenwhiteBtn.png");
+  height: 15px;
+  width: 15px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  position: relative;
+  top: -106px;
+  left: 502px;
 }
 
-.loginButton {
-  background-color: rgb(71, 122, 188);
+.signInBtn {
+  display: flex;
+  left: 1830px;
+  top: -130px;
+  position: relative;
+  font-size: 18px;
+  color: #06654E;
+  &:hover {
+    border-bottom: #06654E solid 1px;
+  }
 }
 
+.signUpBtn {
+  display: flex;
+  left: 1750px;
+  top: -150px;
+  position: relative;
+  font-size: 18px;
+  color: #06654E;
+  &:hover {
+    border-bottom: #06654E solid 1px;
+  }
+}
