# header design - edit SideBarBtn.module.scss position top 18px to 13px - header display flex 적용

--- a/src/components/store/mypage-edit/SideBarBtn.module.scss
+++ b/src/components/store/mypage-edit/SideBarBtn.module.scss
@@ -67,7 +67,7 @@
 
 .sidebarBtn {
   position: absolute;
-  top: 18px;
+  top: 13px; // header size에 맞게 수정
   left: 30px;
   background: none;
   border: none;
