--- a/src/layout/Header.module.scss
+++ b/src/layout/Header.module.scss
@@ -1,4 +1,4 @@
-
+/* 공통 버튼 스타일 */
 button {
   background: none;  /* 배경색 제거 */
   border: none;      /* 테두리 제거 */
@@ -8,18 +8,76 @@ button {
   cursor: pointer;   /* 클릭 가능한 상태임을 나타내는 커서 */
 }
 
+/* 헤더 스타일 */
+.header {
+  display: flex;
+  justify-content: space-between; /* 양 끝으로 배치 */
+  align-items: center; /* 수직 중앙 정렬 */
+  padding: 0 20px; /* 좌우 패딩 */
+  height: 60px; /* 헤더 높이 */
+}
+
+.sideBarBtn {
+  top : 200px;
+}
+
+/* 로고 버튼 */
+.logoBtn {
+  background-image: url("../assets/icon/greenlogo.png");
+  height: 60px;
+  width: 60px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  margin-left: 70px;
+}
+
+/* 현재 위치 버튼 스타일 */
+.locationPinIcon {
+  background-image: url("../assets/icon/location-pin.png");
+  height: 32px;
+  width: 32px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  margin-left: 30px;
+}
+
+/* 텍스트 영역 */
+.areaName {
+  font-size: 18px;
+  margin-right: 10px;
+}
+
+/* 선택된 카테고리 및 버튼 */
+.selectedAreaCategory {
+  font-size: 18px;
+  margin-left: 10px;
+}
+
+.selectedAreaCategoryBtn {
+  background-image: url("../assets/icon/greenwhiteBtn.png");
+  height: 15px;
+  width: 15px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  margin-left: 5px;
+  margin-top: 5px;
+}
+
+
+/* 검색창 스타일 */
 .searchStoreSection {
   display: flex;
-  justify-content: center;
   align-items: center;
-  width: 600px;
-  margin: 0 auto;
+  justify-content: center;
+  width: 100%;
+  max-width: 600px;
   background-color: rgba(6, 101, 78, 0.3);
   border-radius: 50px;
   height: 40px;
+  margin: 0 auto;
   position: relative;
-  top: -45px;
-  transition: background-color 0.3s ease;
+  transition: background-color 0.3s ease; // 검색창 누르면 바뀌는 효과
+  margin-left: 200px;
 
   input {
     width: 100%;
@@ -27,6 +85,7 @@ button {
     background: none;
     border: none;
     padding-left: 35px;
+    margin-left: 10px;
     &::placeholder {
       color: #000000;
     }
@@ -37,95 +96,41 @@ button {
   }
 
   .magnifyClickBtn {
-    position: relative;
+    position: absolute;
     left: 20px;
     height: 20px;
     width: 20px;
+  }
 
-    .magnifyIcon {
-      color: #06654E;
-      left: 20px;
-      height: 20px;
-    }
+  .magnifyIcon {
+    color: #06654E;
+    height: 20px;
   }
 }
 
-  .logoutBtn, .loginBtn { // 로그인, 로그아웃 버튼
-    background-color: #f44; // 버튼 배경색
-    color: #fff; // 텍스트 색상
-    border: none; // 기본 테두리 제거
-    padding: 10px 20px; // 패딩 추가
-    border-radius: 5px; // 모서리 둥글게
-    cursor: pointer; // 포인터 커서
-    font-size: 16px; // 폰트 크기
-  }
-
-  .locationPinIcon {
-    background-image: url("../assets/icon/location-pin.png") !important;
-    height: 32px;
-    width: 32px;
-    background-size: contain;
-    background-repeat: no-repeat;
-    position: absolute;
-    left: 210px;
-    top: 15px;
-  }
-
-  .logoBtn {
-    background-image: url("../assets/icon/greenlogo.png") !important;
-    height: 60px;
-    width: 60px;
-    background-size: contain;
-    background-repeat: no-repeat;
-    left: 100px;
-    position: relative;
-    top: 5px;
-  }
-.areaName {
-  position: relative;
-  top: -72.5px;
-  left: 245px;
-  font-size: 18px;
-  width: 300px;
-}
-.selectedAreaCategory {
-  position: relative;
-  top: -93px;
-  left: 460px;
-  font-size: 18px;
-  width: 200px;
-}
-.selectedAreaCategoryBtn {
-  background-image: url("../assets/icon/greenwhiteBtn.png");
-  height: 15px;
-  width: 15px;
-  background-size: contain;
-  background-repeat: no-repeat;
-  position: relative;
-  top: -106px;
-  left: 502px;
-}
-
-.signInBtn {
+/* 로그인 및 회원가입 버튼 */
+.loginBtnSection {
   display: flex;
-  left: 1830px;
-  top: -130px;
-  position: relative;
+  gap: 10px; /* 버튼 간격 */
+}
+
+.signInBtn, .signUpBtn {
   font-size: 18px;
   color: #06654E;
   &:hover {
     border-bottom: #06654E solid 1px;
   }
+}
+
+/* 로그인 및 회원가입 버튼 위치 */
+.signInBtn {
+  margin-left: auto; /* 오른쪽으로 이동 */
 }
 
 .signUpBtn {
-  display: flex;
-  left: 1750px;
-  top: -150px;
-  position: relative;
-  font-size: 18px;
-  color: #06654E;
-  &:hover {
-    border-bottom: #06654E solid 1px;
-  }
+  margin-right: auto; /* 왼쪽으로 이동 */
+}
+
+.dot {
+margin-top: 5px;
 }
