# get location and save session storage

--- a/src/layout/Header.module.scss
+++ b/src/layout/Header.module.scss
@@ -44,7 +44,7 @@ button {
 /* 텍스트 영역 */
 .areaName {
   font-size: 18px;
-  margin-right: 10px;
+  margin-left: 5px;
 }
 
 /* 선택된 카테고리 및 버튼 */
@@ -132,5 +132,6 @@ button {
 }
 
 .dot {
-margin-top: 5px;
+  margin-top: 5px;
+  margin-left: 10px;
 }
