--- a/src/components/customer/issue/IssueContent.module.scss
+++ b/src/components/customer/issue/IssueContent.module.scss
@@ -27,3 +27,26 @@
     color: #424040;
   }
 }
+
+@media (max-width: 400px) {
+    .issueContainer{
+        width: 100%;
+        padding: 10px;
+        margin: 15px 0;
+
+      .helpHeader{
+        font-size: 20px;
+        padding-left: 13px;
+      }
+      .line{
+        margin: 5px 0;
+        background: white;
+      }
+      .helpDesc{
+        font-size: 11px;
+        margin-top: 10px;
+        padding-left: 15px;
+
+      }
+    }
+}
