--- a/src/components/customer/issue/IssueQuestions.module.scss
+++ b/src/components/customer/issue/IssueQuestions.module.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: baseline;
 
-  .questionBox{
+  .questionBox {
     display: flex;
     justify-content: space-between;
     border: rgba(29, 29, 29, 0.49) 1px solid;
@@ -15,7 +15,7 @@
     margin-top: 5px;
   }
 
-  .answers{
+  .answers {
     display: flex;
     text-align: justify;
     font-size: 17px;
@@ -28,4 +28,22 @@
     border-radius: 15px;
   }
 
+}
+
+@media (max-width: 400px) {
+  .questionContainer {
+    width: 100%;
+    padding: 10px;
+
+    .questionBox {
+      width: 350px;
+      font-size: 16px;
+      padding: 23px 15px 22px 13px;
+    }
+
+    .answers {
+      width: 330px;
+      font-size: 13px;
+    }
+  }
 }
