--- a/src/pages/customer/CustomerIssuePage.module.scss
+++ b/src/pages/customer/CustomerIssuePage.module.scss
@@ -4,3 +4,9 @@
   justify-content: space-between;
   margin: 0 auto;
 }
+
+@media (max-width: 400px) {
+    .customerIssuePage{
+        width: 100%;
+    }
+}
