--- a/src/components/socket/Notification.module.scss
+++ b/src/components/socket/Notification.module.scss
@@ -14,6 +14,7 @@
   color: black;
   width: 360px;
   min-height: 45px;
+  max-height: 500px;
   position: relative;
   top: 5px;
   left: 10px;
@@ -21,6 +22,7 @@
   //padding: 3px;
   box-shadow: 1px 4px 8px rgba(0, 0, 0, 0.3);
   font-family: "Pretendard Variable", Pretendard, sans-serif;
+  overflow: auto;
 
   li {
     height: 45px;
