--- a/src/components/socket/Notification.module.scss
+++ b/src/components/socket/Notification.module.scss
@@ -1,31 +1,43 @@
+.notify-container {
+  width: 50px;
+  height: 40px;
+
+}
 .notify-icon {
   width: 50px;
-  height: 35px;
-  border: 1px solid violet;
-  color: white;
+  height: 40px;
+  //border: 1px solid #ee00ee;
+  color: #06654E;
   font-size: 35px;
   text-align: center;
   line-height: 35px;
+  position: absolute;
+  top: 12px;
+  right: 100px;
 }
 .notify-list {
   background: #FFFFFF;
   border: 1px solid var(--color-gray-300);
   border-radius: 10px;
   color: black;
-  width: 360px;
-  min-height: 45px;
+  width: 400px;
+  min-height: 90px;
   max-height: 500px;
   position: relative;
-  top: 5px;
-  left: 10px;
+  top: 45px;
+  right: 250px;
   z-index: 1;
   //padding: 3px;
   box-shadow: 1px 4px 8px rgba(0, 0, 0, 0.3);
   font-family: "Pretendard Variable", Pretendard, sans-serif;
-  overflow: auto;
+  -ms-overflow-style: none;
+
+  &::-webkit-scrollbar{
+    display:none;
+  }
 
   li {
-    height: 45px;
+    min-height: 45px;
     border-bottom: 1px solid var(--color-gray-300);
     //border: 1px solid blue;
     padding: 15px 10px;
@@ -33,7 +45,7 @@
     margin: auto;
 
     &:first-child {
-      font-size: 18px;
+      font-size: 16px;
       font-weight: 700;
     }
   }
