--- a/src/components/admin/approval/ApprovalSummary.module.scss
+++ b/src/components/admin/approval/ApprovalSummary.module.scss
@@ -36,7 +36,7 @@
       &:last-child {
         font-size: 20px;
         font-weight: 700;
-        color: #06e48e;
+        color: #468585;
         line-height: 24px;
       }
     }
