--- a/src/components/admin/approval/ApprovalTables.module.scss
+++ b/src/components/admin/approval/ApprovalTables.module.scss
@@ -75,7 +75,7 @@ $table-width: 1580px;
           }
           &:hover {
             color: #fff;
-            background: #468585;
+            background: #50B498;
             box-shadow: 0 2px 8px -1px rgba(#151924, .22);
           }
         }
