--- a/src/layout/Footer.module.scss
+++ b/src/layout/Footer.module.scss
@@ -120,3 +120,9 @@
   letter-spacing: 15px;
   text-align: center;
 }
+
+@media (max-width: 780px) and (max-height: 844px) {
+  .footer {
+    display: none;
+  }
+}
