--- a/src/layout/Header.module.scss
+++ b/src/layout/Header.module.scss
@@ -29,6 +29,7 @@ button {
   background-size: contain;
   background-repeat: no-repeat;
   margin-left: 70px;
+  cursor: pointer;
 }
 
 /* 현재 위치 버튼 스타일 */
@@ -149,4 +150,97 @@ button {
 .dot {
   margin-top: 5px;
   margin-left: 10px;
+}
+
+// 햄버거 버튼 반응형 기능 안됨으로 인한 css 추가
+.container {
+  width: 80%;
+  margin: 20px auto 0;
+  border: 1px solid #ccc;
+  border-radius: 15px;
+  display: flex;
+  background: white;
+}
+
+@media (max-width: 400px) {
+  .container {
+    width: 100%;
+    border: none;
+    margin-top: 0;
+  }
+}
+
+// 반응형 헤더
+@media (max-width: 400px) {
+  .header {
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 10px;
+    height: auto;
+  }
+
+  .logoBtn {
+    height: 50px;
+    width: 50px;
+    margin-left: 10px;
+    margin-bottom: 10px; /* 아래쪽에 여백 추가 */
+  }
+
+  .locationPinIcon {
+    height: 24px;
+    width: 24px;
+    margin-left: 10px;
+    margin-bottom: 5px;
+  }
+
+  .areaName {
+    font-size: 16px;
+    margin-left: 5px;
+  }
+
+  .selectedAreaCategory {
+    font-size: 16px;
+    margin-left: 5px;
+    margin-bottom: 10px; /* 아래쪽에 여백 추가 */
+  }
+
+  .selectedAreaCategoryBtn {
+    height: 12px;
+    width: 12px;
+    margin-left: 5px;
+    margin-top: 0;
+  }
+
+  .searchStoreSection {
+    width: 100%;
+    margin: 10px 0;
+    padding: 0 10px;
+    max-width: 100%;
+    margin-left: 0;
+    background-color: rgba(6, 101, 78, 0.5); /* 투명도 증가 */
+  }
+
+  .reviewMainIcon {
+    height: 30px;
+    width: 30px;
+    margin-left: 10px;
+    margin-top: 10px; /* 위쪽에 여백 추가 */
+  }
+
+  .loginBtnSection {
+    flex-direction: column;
+    gap: 5px; /* 버튼 간격 감소 */
+    margin-top: 10px;
+  }
+
+  .signInBtn, .signUpBtn {
+    font-size: 16px;
+    margin: 0;
+  }
+
+  .dot {
+    margin-left: 0;
+    margin-top: 0;
+    display: none; /* 점 제거 */
+  }
 }
