--- a/src/common.module.scss
+++ b/src/common.module.scss
@@ -26,12 +26,14 @@ body {
     font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #F5F5DD;
+    background-color: #FFFFFF;
     min-height: 1080px; /* 최소 높이 설정 */
+
 }
 
-main {
+body main {
     min-height: 1080px; /* 최소 높이 설정 */
+    padding-top: 60px; /* 헤더 높이만큼 패딩을 추가 */
 }
 
 a {
