--- a/src/layout/Header.module.scss
+++ b/src/layout/Header.module.scss
@@ -19,6 +19,11 @@ button {
   max-width: 1920px; /* 최대 너비를 1920px로 제한 */
   margin: 0 auto; /* 중앙 정렬 */
   background-color: #F5F5DD;
+
+  position: fixed;  /* 화면에 고정 */
+  top: 0;           /* 화면 상단에 위치 */
+  left: 0;          /* 왼쪽에 고정 */
+  z-index: 1000;    /* 다른 요소 위에 위치 */
 }
 
 /* 로고 버튼 */
