--- a/src/components/header/MyInfo.module.scss
+++ b/src/components/header/MyInfo.module.scss
@@ -7,11 +7,6 @@
   margin-left: 60px;
 }
 
-.myInfoContainer {
-  display: flex;
-  align-items: center;
-}
-
 .myIconContainer {
   margin-left: auto; /* 오른쪽 끝으로 이동 */
   display: flex;
@@ -34,3 +29,8 @@
   font-size: 12px;
 }
 
+@media (max-width: 400px) and (max-height: 844px) {
+  .myIconContainer {
+    display: none;
+  }
+}
