# 반응형 헤더 수정중 - 검색창이 작아서 입력이 제대로 안됨 - 햄버거 버튼을 누르면 배경색이 투명해짐

--- a/src/components/socket/Notification.module.scss
+++ b/src/components/socket/Notification.module.scss
@@ -69,3 +69,12 @@
     opacity: 0;
   }
 }
+
+// header 알림아이콘 반응형 크기
+@media (max-width: 400px) {
+
+  .notify-icon {
+    position: absolute;
+    right: 10px;
+  }
+}
