--- a/src/layout/Header.module.scss
+++ b/src/layout/Header.module.scss
@@ -178,63 +178,70 @@ button {
 // 반응형 헤더
 @media (max-width: 400px) {
   .header {
-    flex-direction: column;
-    align-items: flex-start;
+    flex-direction: row; /* 요소들을 가로로 정렬 */
+    align-items: center; /* 세로 가운데 정렬 */
     padding: 10px;
-    height: auto;
+    height: 60px;
   }
 
   .logoBtn {
-    height: 50px;
-    width: 50px;
-    margin-left: 50px;
-    margin-bottom: 5px; /* 아래쪽에 여백 추가 */
+    position: absolute;
+    height: 40px;
+    width: 40px;
+    margin-left: 60px;
   }
 
   .locationPinIcon {
-    height: 24px;
-    width: 24px;
-    margin-left: 10px;
-    margin-bottom: 5px;
+    //position: absolute;
+    //height: 32px;  /* 크기를 줄이지 않음 */
+    //width: 32px;
+    //margin-left: 10px;
+    display: none;
   }
 
-  .areaName {
-    font-size: 16px;
+  .selectedAreaCategoryBtn {
+    position: absolute;
+    height: 15px;
+    width: 15px;
     margin-left: 5px;
+    margin-top: 0;
+    left: 200px;
+  }
+
+  // 각종 기능은 드롭다운모달로 볼 수있게 설정?
+  .reviewMainIcon {
+    //position: absolute;
+    //right: 5px;
+    //height: 40px;  /* 크기를 줄이지 않음 */
+    //width: 40px;
+    //margin-left: 10px;
+    display: none;
+  }
+
+  //반응형일시 현재위치 렌더링 안함, 드롭다운으로 볼 수 있게 설정해보기.
+  .areaName {
+    display: none;
   }
 
   .selectedAreaCategory {
     font-size: 16px;
     margin-left: 5px;
-    margin-bottom: 10px; /* 아래쪽에 여백 추가 */
-  }
-
-  .selectedAreaCategoryBtn {
-    height: 12px;
-    width: 12px;
-    margin-left: 5px;
-    margin-top: 0;
+    margin-bottom: 0; /* 아래쪽 여백 제거 */
   }
 
   .searchStoreSection {
     width: 120px;
-    margin: 10px 0;
     padding: 0 10px;
-    max-width: 100%;
     background-color: rgba(6, 101, 78, 0.5); /* 투명도 증가 */
-  }
-
-  .reviewMainIcon {
-    height: 30px;
-    width: 30px;
-    margin-left: 10px;
-    margin-top: 10px; /* 위쪽에 여백 추가 */
+    margin-left: 0; /* or 조정된 값으로 변경 */
   }
 
   .loginBtnSection {
-    flex-direction: column;
-    gap: 5px; /* 버튼 간격 감소 */
-    margin-top: 10px;
+    display: flex;
+    flex-direction: row; /* 버튼들을 가로로 정렬 */
+    gap: 5px;
+    margin-left: auto; /* 오른쪽으로 밀기 */
+    margin-top: 0;
   }
 
   .signInBtn, .signUpBtn {
