# 모바일 반응형 제거

--- a/src/components/mainPage/FavAreaSelector.module.scss
+++ b/src/components/mainPage/FavAreaSelector.module.scss
@@ -59,12 +59,12 @@
   color: rgb(68, 132, 68);
 }
 
-@media (max-width: 400px) {
-  .container {
-    // background: rgba(253, 253, 90, 0.8);
-    background: rgba(245, 245, 221, 0.8);
-    width: 210px;
-    left: 25px;
-    top: 12px;
-  }
-}
+// @media (max-width: 400px) {
+//   .container {
+//     // background: rgba(253, 253, 90, 0.8);
+//     background: rgba(245, 245, 221, 0.8);
+//     width: 210px;
+//     left: 25px;
+//     top: 12px;
+//   }
+// }
