--- a/src/pages/customer/CustomerReservationDetailModal.module.scss
+++ b/src/pages/customer/CustomerReservationDetailModal.module.scss
@@ -109,7 +109,7 @@
       }
 
     }
-    .pickupConfirmBtn{
+    .pickupConfirmBtn, .pickupCancelBtn {
       width: 100%;
       padding: 13px 0;
     }
