--- a/src/components/notification/Notification.module.scss
+++ b/src/components/notification/Notification.module.scss
@@ -14,6 +14,7 @@
   position: absolute;
   top: 12px;
   right: 100px;
+  cursor: pointer;
 }
 .notify-list {
   background: #FFFFFF;
@@ -49,6 +50,9 @@
       font-size: 16px;
       font-weight: 700;
       background: #f1f2f4;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
     }
   }
 }
@@ -87,6 +91,15 @@
 .cancel {
  background: #fec0c0;
   border-color: #fca2a2;
+}
+.read-all-btn {
+  background: #50B498;
+  color: #FFFFFF;
+  width: 60px;
+  height: 30px;
+  padding: 3px 5px;
+  border-radius: 5px;
+  font-family: "Pretendard Variable", Pretendard, sans-serif;
 }
 
 @media (max-width: 400px) {
