--- a/src/components/notification/Notification.module.scss
+++ b/src/components/notification/Notification.module.scss
@@ -49,7 +49,7 @@
     &:first-child {
       font-size: 16px;
       font-weight: 700;
-      background: #f1f2f4;
+      background: #f9fafc;
       display: flex;
       justify-content: space-between;
       align-items: center;
@@ -95,11 +95,16 @@
 .read-all-btn {
   background: #50B498;
   color: #FFFFFF;
-  width: 60px;
+  width: 70px;
   height: 30px;
-  padding: 3px 5px;
+  //padding: 3px 5px;
   border-radius: 5px;
   font-family: "Pretendard Variable", Pretendard, sans-serif;
+}
+.read {
+  background-color: rgba(50, 50, 80, 0.1); /* 배경 흐림 처리 */
+  color: rgba(0, 0, 0, 0.5); /* 글씨 흐림 처리 */
+  filter: blur(0.5px); /* 선택적: 흐림 효과 */
 }
 
 @media (max-width: 400px) {
