--- a/src/components/storeRegister/StoreRegisterForm.module.scss
+++ b/src/components/storeRegister/StoreRegisterForm.module.scss
@@ -3,15 +3,17 @@
 
  $form-w: 750px;
  $form-inner-w: 75%;
- $color-main: #43e97b;
+ $color-main: #50B498;
  $font-pretendard: "Pretendard Variable", Pretendard, sans-serif;
 
 .registration {
-  width: 750px;
-  margin: 0 auto;
-  padding: 20px 50px;
-  border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  width: 700px;
+  max-height: 570px;
+  margin: 40px 5px 10px;
+  //padding: 20px 20px 20px 5px;
+  //border: 1px solid red;
+  //border-radius: 10px;
+  //box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   position: relative;
   display: flex;
   justify-content: center;
@@ -21,18 +23,6 @@
   text-align: left;
   font-family: $font-pretendard ;
 
-  h2 {
-    font-weight: 700;
-    font-size: 1.2rem;
-    margin-top: 30px;
-    margin-bottom: 10px;
-    text-align: center;
-  }
-  h3 {
-    font-size: 1.1rem;
-    margin-bottom: 30px;
-    text-align: center;
-  }
   label {
     width: $form-inner-w;
     margin: 0 auto 5px;
@@ -40,7 +30,7 @@
     flex-direction: row;
     justify-content: space-between;
     font-weight: 500;
-    color: var(--color-gray-500);
+    color: #65636f;
 
     .error {
       font-size: 0.9rem;
@@ -61,8 +51,8 @@
     font-size: 16px;
 
     &:focus {
-      border: 2px solid $color-main;
-      box-shadow: 1px 3px 5px rgba(100, 100, 100, 0.1);
+      border: none;
+      box-shadow: 0 0 0 2px $color-main;
       outline: none;
     }
     & * {
@@ -76,13 +66,27 @@
 
   }
 
+  .address-row {
+    display: flex;
+    flex-direction: row;
+    width: $form-inner-w;
+    margin: 0 auto 5px;
+    //border: 1px solid blueviolet;
+    justify-content: space-between;
+
+    input {
+      margin: 0 6px 0 0;
+      width: 80%;
+    }
+  }
+
   .btn-approval {
     width: 200px;
     display:block;
     position: relative;
     left: 50%;
     transform: translateX(-50%);
-    margin: 30px 0 50px;
+    //margin: 30px 0 20px;
     padding:15px 35px;
     border: 0;
     border-radius:6px;
@@ -97,7 +101,7 @@
     cursor:pointer;
 
     &:hover, &:active {
-      background:linear-gradient(to right, $color-main 0%, #38f9d7 100%);
+      background: #38efa9;
     }
   }
   .disabled {
@@ -112,17 +116,10 @@
 
  @media (max-width: 400px) {
    .registration {
-     width: 100%;
-     padding: 15px;
+     width: 99%;
+     padding: 15px 10px;
+     margin: 0 auto;
 
-     h2 {
-       font-size: 1.2rem;
-       margin-top: 10px
-     }
-
-     h3 {
-       font-size: 1rem;
-     }
      label {
        width: 96%;
 
@@ -135,6 +132,15 @@
        margin: 0 auto 30px;
        padding: 8px;
        font-size: 16px;
+     }
+     .address-row {
+       width: 96%;
+       margin: 0 auto 30px;
+       font-size: 16px;
+
+       input {
+         width: 70%;
+       }
      }
 
      .btn-approval {
