--- a/src/components/admin/issue/ChatComponent.module.scss
+++ b/src/components/admin/issue/ChatComponent.module.scss
@@ -6,12 +6,14 @@
 
 
   button {
-    padding: 8px 12px;
+    padding: 12px 33px;
     border: none;
     border-radius: 5px;
-    background-color: #007bff;
-    color: white;
+    background-color: rgba(140, 143, 148, 0.85);
+    color: rgba(0, 0, 0, 0.69);
     cursor: pointer;
+    font-size: 15px;
+    font-weight: 500;
   }
 
   button:disabled {
