# Store/Customer: 로그아웃 버튼 스타일 수정

--- a/src/components/customer/mypage/Profile.module.scss
+++ b/src/components/customer/mypage/Profile.module.scss
@@ -66,6 +66,20 @@
           background: linear-gradient(135deg, #e0eee0, #dff3d8);
         }
       }
+
+      .logoutButton {
+        width: 100%;
+        color: #111;
+        padding: 10px 0;
+        display: block;
+        border-radius: .75rem;
+        font-weight: 600;
+
+        &:hover {
+          color: #fff;
+          background: rgba(178, 34, 34, 0.58);
+        }
+      }
     }
   }
 
