--- a/src/components/customer/mypage/Profile.module.scss
+++ b/src/components/customer/mypage/Profile.module.scss
@@ -61,6 +61,12 @@
         border-radius: .75rem;
         font-weight: 600;
 
+        &.active {
+          color: rgba(8, 10, 8, 1);
+          background: linear-gradient(135deg, #e0eee0, #dff3d8);
+          pointer-events: none; // 클릭 막기
+        }
+
         &:hover {
           color: rgba(8, 10, 8, 1);
           background: linear-gradient(135deg, #e0eee0, #dff3d8);
