--- a/src/index.css
+++ b/src/index.css
@@ -33,6 +33,12 @@
   --color-primary-700: #fbc14d;
   --color-primary-800: #fab833;
   --color-primary-900: #f6ad1b;
+
+  --color-main-100: #DEF9C4;
+  --color-main-200: #9CDBA6;
+  --color-main-300: #50B498;
+  --color-main-400: #468585;
+  --color-main-500: #0D6E74;
 }
 
 body {
