--- a/src/components/storeRegister/StoreRegister.module.scss
+++ b/src/components/storeRegister/StoreRegister.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  margin: 20px auto 50px;
+  margin: 20px 0 50px 20px;
   min-height: 700px;
   //border: 1px solid greenyellow;
 
