--- a/src/components/storeRegister/StoreRegisterForm.module.scss
+++ b/src/components/storeRegister/StoreRegisterForm.module.scss
@@ -1,19 +1,15 @@
  // 폰트: 프리텐다드
 @import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable.min.css");
 
- $form-w: 750px;
- $form-inner-w: 75%;
- $color-main: #50B498;
+ $form-w: 700px;
+ $form-inner-w: 77%;
+ $color-main: var(--color-main-300);
  $font-pretendard: "Pretendard Variable", Pretendard, sans-serif;
 
 .registration {
-  width: 700px;
+  width: 650px;
   max-height: 570px;
   margin: 40px 5px 10px;
-  //padding: 20px 20px 20px 5px;
-  //border: 1px solid red;
-  //border-radius: 10px;
-  //box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   position: relative;
   display: flex;
   justify-content: center;
@@ -30,7 +26,7 @@
     flex-direction: row;
     justify-content: space-between;
     font-weight: 500;
-    color: #65636f;
+    color: #414047;
 
     .error {
       font-size: 0.9rem;
@@ -61,7 +57,7 @@
     }
     &::placeholder {
       font-family: $font-pretendard;
-      color: #ccc;
+      color: #8b8b8d;
     }
 
   }
@@ -86,12 +82,10 @@
     position: relative;
     left: 50%;
     transform: translateX(-50%);
-    //margin: 30px 0 20px;
     padding:15px 35px;
     border: 0;
     border-radius:6px;
     background: $color-main;
-    //color:var(--color-gray-800);
     color: #FFFFFF;
     font-family: $font-pretendard;
     font-size: 1rem;
