# 내 리뷰 내역 섹션 스크롤

--- a/src/pages/Community/CommunityMainPage.module.scss
+++ b/src/pages/Community/CommunityMainPage.module.scss
@@ -190,6 +190,9 @@
 
 .pendingReviewsList {
   width: 100%;
+  max-height: 600px;
+  overflow: scroll;
+  margin-bottom: 60px;
 }
 
 .pendingReviewItem {
