--- a/src/components/notification/Notification.module.scss
+++ b/src/components/notification/Notification.module.scss
@@ -27,7 +27,7 @@
   position: relative;
   top: 45px;
   right: 250px;
-  z-index: 1;
+  z-index: 5;
   //padding: 3px;
   box-shadow: 1px 4px 8px rgba(0, 0, 0, 0.3);
   font-family: "Pretendard Variable", Pretendard, sans-serif;
@@ -40,8 +40,7 @@
 
   li {
     min-height: 45px;
-    border-bottom: 1px solid var(--color-gray-300);
-    //border: 1px solid blue;
+    border-bottom: 1px solid #ebebeb;
     padding: 15px 10px;
     font-size: 16px;
     margin: auto;
@@ -53,6 +52,7 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
+      color: #1d1d1d;
     }
   }
 }
