--- a/src/common.module.scss
+++ b/src/common.module.scss
@@ -211,3 +211,10 @@ a.button {
 .search span {
     font-weight: 200;
 }
+
+// TODO
+@media (max-width: 400px) {
+    footer {
+        display: none;
+    }
+}
